# tiencuatoi_projects

./: README.md
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260228_0800_8fa2c31c656a_init.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: api_router.py
backend/app/api/v1/routers/: admin_router.py  user_router.py
backend/app/constants/: enums.py
backend/app/core/: config.py  exceptions.py  middleware.py  security.py
backend/app/db/: base.py  session.py
backend/app/features/admin_auth/: router.py  schemas.py  service.py
backend/app/features/auth/: router.py  schemas.py  service.py
backend/app/features/users/: admin_router.py  router.py  schemas.py  service.py
backend/app/models/: __init__.py  admin.py  base.py  user.py
backend/app/repositories/implementations/: admin_repository.py  base.py  user_repository.py
backend/app/repositories/interfaces/: admin_repository.py  base.py  user_repository.py
backend/app/tasks/: tasks.py
backend/app/utils/: helpers.py
backend/docker/mysql/init/: 00_readme.sql
backend/scripts/: create_admin.py
backend/tests/: conftest.py
backend/tests/features/: test_auth.py
backend/tests/repositories/: test_user_repository.py
